--- a/OmnieCommerceAdmin/Base.lproj/Main.storyboard
+++ b/OmnieCommerceAdmin/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main Show View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainShowVC" id="BYZ-38-t0r" customClass="MainShowViewController" customModule="OmnieCommerceAdmin" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,8 +20,32 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGf-vz-8B6" userLabel="Guest View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="0.0" green="0.57647058819999997" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="whr-fV-2YZ" userLabel="User View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="xGf-vz-8B6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2pR-wm-7tU"/>
+                            <constraint firstAttribute="trailing" secondItem="whr-fV-2YZ" secondAttribute="trailing" id="Che-oA-Fts"/>
+                            <constraint firstItem="whr-fV-2YZ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="EJN-zd-Mla"/>
+                            <constraint firstAttribute="bottom" secondItem="xGf-vz-8B6" secondAttribute="bottom" id="PR7-Bn-1Ne"/>
+                            <constraint firstAttribute="trailing" secondItem="xGf-vz-8B6" secondAttribute="trailing" id="SZ1-YH-Ays"/>
+                            <constraint firstItem="xGf-vz-8B6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="cXy-aE-qgq"/>
+                            <constraint firstAttribute="bottom" secondItem="whr-fV-2YZ" secondAttribute="bottom" id="eqR-SM-6pa"/>
+                            <constraint firstItem="whr-fV-2YZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="o9e-aX-qjK"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="guestView" destination="xGf-vz-8B6" id="Qo2-AE-vZp"/>
+                        <outlet property="userView" destination="whr-fV-2YZ" id="M3y-0c-nbx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
