--- a/OmnieCommerceAdmin/Base.lproj/Main.storyboard
+++ b/OmnieCommerceAdmin/Base.lproj/Main.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="helveticaneuecyr-light.otf">
+            <string>HelveticaNeueCyr-Light</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Main Show View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -23,14 +28,56 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xGf-vz-8B6" userLabel="Guest View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="0.0" green="0.57647058819999997" blue="0.58431372550000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="whr-fV-2YZ" userLabel="User View">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z8O-Xr-VBp" userLabel="Top View">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQm-x8-8nJ" userLabel="NavBar View">
+                                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FIO-Q0-I1x" userLabel="Menu Button">
+                                                        <rect key="frame" x="8" y="11" width="23" height="22"/>
+                                                        <state key="normal" image="icon-navbar-menu"/>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My organization" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VW1-24-XvI" userLabel="Title Label">
+                                                        <rect key="frame" x="137" y="15" width="102" height="14"/>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeueCyr-Light" family="HelveticaNeueCyr" pointSize="15"/>
+                                                        <color key="textColor" red="0.87058823529411766" green="0.87058823529411766" blue="0.87058823529411766" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="FIO-Q0-I1x" firstAttribute="centerY" secondItem="XQm-x8-8nJ" secondAttribute="centerY" id="4tx-4e-fWj"/>
+                                                    <constraint firstItem="VW1-24-XvI" firstAttribute="centerY" secondItem="XQm-x8-8nJ" secondAttribute="centerY" id="Kwa-qa-jtz"/>
+                                                    <constraint firstItem="FIO-Q0-I1x" firstAttribute="leading" secondItem="XQm-x8-8nJ" secondAttribute="leading" constant="8" id="Vog-6T-8bo"/>
+                                                    <constraint firstItem="VW1-24-XvI" firstAttribute="centerX" secondItem="XQm-x8-8nJ" secondAttribute="centerX" id="YrJ-x8-0yt"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="XQm-x8-8nJ" secondAttribute="bottom" id="1Ue-kN-PJ6"/>
+                                            <constraint firstAttribute="height" constant="64" id="7AN-z5-Go4"/>
+                                            <constraint firstItem="XQm-x8-8nJ" firstAttribute="leading" secondItem="Z8O-Xr-VBp" secondAttribute="leading" id="98W-Jb-mFK"/>
+                                            <constraint firstAttribute="trailing" secondItem="XQm-x8-8nJ" secondAttribute="trailing" id="QL2-J4-EVj"/>
+                                            <constraint firstItem="XQm-x8-8nJ" firstAttribute="top" secondItem="Z8O-Xr-VBp" secondAttribute="top" constant="20" id="j3x-rZ-iwO"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Z8O-Xr-VBp" secondAttribute="trailing" id="ShM-dr-bjs"/>
+                                    <constraint firstItem="Z8O-Xr-VBp" firstAttribute="leading" secondItem="whr-fV-2YZ" secondAttribute="leading" id="Txz-yX-tAI"/>
+                                    <constraint firstItem="Z8O-Xr-VBp" firstAttribute="top" secondItem="whr-fV-2YZ" secondAttribute="top" id="hhz-LY-1IZ"/>
+                                </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="xGf-vz-8B6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="2pR-wm-7tU"/>
                             <constraint firstAttribute="trailing" secondItem="whr-fV-2YZ" secondAttribute="trailing" id="Che-oA-Fts"/>
@@ -49,6 +96,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="54.422788605697157"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon-navbar-menu" width="23" height="14"/>
+    </resources>
 </document>
