--- a/OmnieCommerceAdmin/Storyboards/SignInShow.storyboard
+++ b/OmnieCommerceAdmin/Storyboards/SignInShow.storyboard
@@ -28,7 +28,7 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image-logo-vertical" translatesAutoresizingMaskIntoConstraints="NO" id="msX-uK-raq">
                                         <rect key="frame" x="0.0" y="0.0" width="275" height="138.5"/>
                                         <variation key="heightClass=compact-widthClass=compact" image="image-logo-horizontal"/>
-                                        <variation key="heightClass=compact-widthClass=regular" image="874FD970-77C5-4349-B4B9-51368714882F"/>
+                                        <variation key="heightClass=compact-widthClass=regular" image="A4D776CE-E66F-4D42-90F1-2C20D2DED2DA"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="r0S-9A-Zgy">
                                         <rect key="frame" x="0.0" y="138.5" width="275" height="496.5"/>
@@ -81,9 +81,25 @@
                                                                 <subviews>
                                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Esj-u5-vXG" userLabel="Name Line View" customClass="CustomView" customModule="OmnieCommerceAdmin" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="0.0" width="275" height="37"/>
+                                                                        <subviews>
+                                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="swM-42-2YU" userLabel="Name Text Field" customClass="CustomTextField" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                                                <rect key="frame" x="8" y="17" width="259" height="17"/>
+                                                                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                <nil key="textColor"/>
+                                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
+                                                                                <userDefinedRuntimeAttributes>
+                                                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="fieldLast" value="NO"/>
+                                                                                    <userDefinedRuntimeAttribute type="string" keyPath="fieldStyle" value="Name"/>
+                                                                                </userDefinedRuntimeAttributes>
+                                                                            </textField>
+                                                                        </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                         <constraints>
+                                                                            <constraint firstItem="swM-42-2YU" firstAttribute="leading" secondItem="Esj-u5-vXG" secondAttribute="leading" constant="8" id="4UU-Rf-kcg"/>
                                                                             <constraint firstAttribute="height" constant="37" id="CTo-CV-gmT"/>
+                                                                            <constraint firstAttribute="trailing" secondItem="swM-42-2YU" secondAttribute="trailing" constant="8" id="Rn0-D0-0nI"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="swM-42-2YU" secondAttribute="bottom" constant="3" id="Wl0-Li-vDz"/>
                                                                         </constraints>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="string" keyPath="viewDesign" value="SingleBottomVeryLightGrayLine"/>
@@ -91,8 +107,24 @@
                                                                     </view>
                                                                     <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x1v-Ri-hv4" userLabel="Password Line View" customClass="CustomView" customModule="OmnieCommerceAdmin" customModuleProvider="target">
                                                                         <rect key="frame" x="0.0" y="37" width="275" height="37"/>
+                                                                        <subviews>
+                                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="puu-bd-4T6" userLabel="Password Text Field" customClass="CustomTextField" customModule="OmnieCommerceAdmin" customModuleProvider="target">
+                                                                                <rect key="frame" x="8" y="17" width="259" height="17"/>
+                                                                                <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                <nil key="textColor"/>
+                                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no"/>
+                                                                                <userDefinedRuntimeAttributes>
+                                                                                    <userDefinedRuntimeAttribute type="boolean" keyPath="fieldLast" value="YES"/>
+                                                                                    <userDefinedRuntimeAttribute type="string" keyPath="fieldStyle" value="Password"/>
+                                                                                </userDefinedRuntimeAttributes>
+                                                                            </textField>
+                                                                        </subviews>
                                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                         <constraints>
+                                                                            <constraint firstAttribute="trailing" secondItem="puu-bd-4T6" secondAttribute="trailing" constant="8" id="0WO-na-OkS"/>
+                                                                            <constraint firstItem="puu-bd-4T6" firstAttribute="leading" secondItem="x1v-Ri-hv4" secondAttribute="leading" constant="8" id="jbw-oi-xUJ"/>
+                                                                            <constraint firstAttribute="bottom" secondItem="puu-bd-4T6" secondAttribute="bottom" constant="3" id="mgu-ZH-hXq"/>
                                                                             <constraint firstAttribute="height" constant="37" id="pSo-7S-xj3"/>
                                                                         </constraints>
                                                                         <userDefinedRuntimeAttributes>
@@ -100,7 +132,7 @@
                                                                         </userDefinedRuntimeAttributes>
                                                                     </view>
                                                                 </subviews>
-                                                                <color key="backgroundColor" red="0.0" green="0.57647058819999997" blue="0.58431372550000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="trailing" secondItem="Esj-u5-vXG" secondAttribute="trailing" id="3fS-hs-MMc"/>
                                                                     <constraint firstItem="Esj-u5-vXG" firstAttribute="leading" secondItem="eoE-MW-EyJ" secondAttribute="leading" id="FeF-f2-MFL"/>
@@ -210,11 +242,11 @@
                     </constraints>
                 </stackView>
             </objects>
-            <point key="canvasLocation" x="231.25" y="63.75"/>
+            <point key="canvasLocation" x="231.19999999999999" y="63.418290854572717"/>
         </scene>
     </scenes>
     <resources>
-        <image name="874FD970-77C5-4349-B4B9-51368714882F" width="113" height="148">
+        <image name="A4D776CE-E66F-4D42-90F1-2C20D2DED2DA" width="113" height="148">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
